# ipmicfg

./: Cargo.toml  README.md  RELEASING.md  TODO.md
.github/workflows/: packages.yml  release.yml
src/: cli.rs  conn.rs  fru.rs  main.rs  ui.rs
src/cmd/: bmc.rs  boot.rs  fujitsu.rs  identify.rs  inventory.rs  lan.rs  mod.rs  power.rs  raw.rs  sel.rs  sensors.rs  status.rs  user.rs
